@@ -27,6 +27,11 @@
 # 15secs parsing:
 #   [SDL][15.249] Scene objects count: 4502
 ################################################################################
+# Optimized ToString() 2021/02/19
+#
+# 10secs parsing:
+#   [SDL][10.546] Scene objects count: 4502
+################################################################################
 
 light.maxdepth = 10
 path.maxdepth = 10
