@@ -3,6 +3,7 @@
 ### New Features
 
 * BIDIRCPU can now use PhotonGI caustic cache to render SDS paths
+* Optimized the parsing of mesh light sources and it is now about 3x faster
 
 ### Fixed Bugs
 
